Move export of 2021 geographic boundaries

--- a/boundaries/export_2021.ipynb
+++ b/boundaries/export_2021.ipynb
@@ -31,8 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "output_folder=\"${DATA_FOLDER}/boundaries/output/2021/digital_boundary_files\"\n",
-    "mkdir -p ${output_folder}"
+    "output_folder=\"${DATA_FOLDER}/boundaries/output/2021/digital_boundary_files\""
    ]
   },
   {
@@ -133,8 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_folder=\"${DATA_FOLDER}/boundaries/output/2021/cartographic_boundary_files\"\n",
-    "mkdir -p ${output_folder}"
+    "output_folder=\"${DATA_FOLDER}/boundaries/output/2021/cartographic_boundary_files\""
    ]
   },
   {
