Process 2024-06 national address register

--- a/national_address_register/process_2024_06.ipynb
+++ b/national_address_register/process_2024_06.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "id": "e10bc182-d0d6-4aa3-99b3-2fc396f9ce34",
    "metadata": {},
    "outputs": [],
@@ -67,24 +67,24 @@
    "id": "7f170d27-14ca-488a-811d-1c9836264bb6",
    "metadata": {},
    "source": [
-    "# 1. Process 2024-12 vintage"
+    "# 1. Process 2024-06 vintage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b27e0edc-59ca-4a63-8bff-1d85909aa174",
    "metadata": {},
    "outputs": [],
    "source": [
-    "nar_addresses_csvs = glob.glob(f'{input_folder}/2024-12/Addresses/*.csv')\n",
-    "nar_locations_csvs = glob.glob(f'{input_folder}/2024-12/Locations/*.csv')\n",
+    "nar_addresses_csvs = glob.glob(f'{input_folder}/2024-06/Addresses/*.csv')\n",
+    "nar_locations_csvs = glob.glob(f'{input_folder}/2024-06/Locations/*.csv')\n",
     "encoding = 'utf-8'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "3fcca833-8547-43b1-b5c7-e5f463ef0bbc",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
     "                        'OFFICIAL_STREET_DIR',\n",
     "                        'MAIL_STREET_NAME',\n",
     "                        'MAIL_STREET_TYPE',\n",
-    "                        'MAIL_STREET_DIR',\n",
+    "                        'MAIL_STEET_DIR',\n",
     "                        'MAIL_MUN_NAME',\n",
     "                        'MAIL_POSTAL_CODE',\n",
     "                        'BG_DLS_LSD',\n",
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "f9bb3a4d-d913-4b9d-aa49-7ec2c4dfef60",
    "metadata": {},
    "outputs": [
@@ -183,70 +183,56 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_10.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_11.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_12.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_13.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_24_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_24_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_24_part_3.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_24_part_4.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_35_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_35_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_35_part_3.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_35_part_4.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_35_part_5.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_46.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_47.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_48_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_48_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_59_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_59_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_60.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_61.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Locations/Location_62.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_10.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_11.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_12.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_13.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_24_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_24_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_24_part_3.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_24_part_4.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_35_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_35_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_35_part_3.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_35_part_4.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_35_part_5.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_46.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_47.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_48_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_48_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_59_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_59_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_60.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_61.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Locations/Location_62.csv\n",
       "Concatenating all dataframes into one\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_10.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_11.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_12.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_13.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_943/484766080.py:74: DtypeWarning: Columns (27) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  nar_address_df = pd.read_csv(**params)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_24_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_24_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_24_part_3.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_24_part_4.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_24_part_5.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_35_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_35_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_35_part_3.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_35_part_4.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_35_part_5.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_35_part_6.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_35_part_7.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_46.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_47.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_48_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_48_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_48_part_3.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_59_part_1.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_59_part_2.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_59_part_3.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_60.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_61.csv\n",
-      "Processing /data/national_address_register/extracted/2024-12/Addresses/Address_62.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_10.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_11.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_12.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_13.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_24_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_24_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_24_part_3.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_24_part_4.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_24_part_5.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_35_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_35_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_35_part_3.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_35_part_4.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_35_part_5.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_35_part_6.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_35_part_7.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_46.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_47.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_48_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_48_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_48_part_3.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_59_part_1.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_59_part_2.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_59_part_3.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_60.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_61.csv\n",
+      "Processing /data/national_address_register/extracted/2024-06/Addresses/Address_62.csv\n",
       "Concatenating all dataframes into one\n"
      ]
     }
@@ -268,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "id": "f3600645-c350-473f-81ea-0bd9ebe70e37",
    "metadata": {},
    "outputs": [
@@ -281,11 +267,25 @@
     },
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f927771f74bd4f81a7ca98cbf227b958",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "40"
+       "FloatProgress(value=0.0, layout=Layout(width='auto'), style=ProgressStyle(bar_color='black'))"
       ]
      },
-     "execution_count": 6,
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "616"
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
     "print(\"Combining nar_addresses and nar_locations\")\n",
     "nar_addresses_combined = duckdb.sql(\"\"\"\n",
     "SELECT a.addr_guid, a.apt_no_label, a.civic_no, a.civic_no_suffix, a.official_street_name, a.mail_street_name, a.official_street_type, a.mail_street_type,\n",
-    "       a.official_street_dir AS official_street_direction, a.mail_street_dir AS mail_street_direction, a.mail_postal_code, a.mail_mun_name AS mail_municipality_name, \n",
+    "       a.official_street_dir AS official_street_direction, a.mail_steet_dir AS mail_street_direction, a.mail_postal_code, a.mail_mun_name AS mail_municipality_name, \n",
     "       a.bu_n_civic_add, a.bu_use,\n",
     "       a.bg_dls_lsd, a.bg_dls_qtr, a.bg_dls_sctn, a.bg_dls_rng, a.bg_dls_mrd,\n",
     "       b.reppoint_latitude, b.reppoint_longitude\n",
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "0d35eec6-8ab3-4e7a-a7fd-2915333e27f9",
    "metadata": {},
    "outputs": [],
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "614ad773-adb3-413c-8b8f-da721afc85cd",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "cac024f8-6eb5-48ea-88ad-289edf505ba3",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 35,
    "id": "d2f81e61-1fc7-4518-ad1f-d515e16ce22c",
    "metadata": {},
    "outputs": [
@@ -375,13 +375,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading geodataframe to PostgreSQL as bronze.nar_2024_12\n"
+      "Loading geodataframe to PostgreSQL as bronze.nar_2024_06\n"
      ]
     }
    ],
    "source": [
-    "print(\"Loading geodataframe to PostgreSQL as bronze.nar_2024_12\")\n",
-    "gdf.to_postgis(name=\"nar_2024_12\", \n",
+    "print(\"Loading geodataframe to PostgreSQL as bronze.nar_2024_06\")\n",
+    "gdf.to_postgis(name=\"nar_2024_06\", \n",
     "               schema='bronze',\n",
     "               con=engine,\n",
     "               chunksize=150000)"
@@ -389,17 +389,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "id": "b7fb6976-0b95-445e-b1e8-022c39bce25b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "584"
+       "3477"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,14 +420,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 37,
    "id": "f7f56297-150b-4ad2-a5c2-2ee5e477f978",
    "metadata": {},
    "outputs": [],
    "source": [
     "sql = \"\"\"\n",
-    "DROP TABLE IF EXISTS silver.nar_2024_12;\n",
-    "CREATE TABLE silver.nar_2024_12 AS\n",
+    "DROP TABLE IF EXISTS silver.nar_2024_06;\n",
+    "CREATE TABLE silver.nar_2024_06 AS\n",
     "SELECT DISTINCT\n",
     "    b.country_dguid,\n",
     "    b.country_en_name,\n",
@@ -490,12 +490,12 @@
     "    a.bg_dls_rng,\n",
     "    a.bg_dls_mrd,\n",
     "    a.geometry AS geom\n",
-    "FROM bronze.nar_2024_12 AS a,\n",
+    "FROM bronze.nar_2024_06 AS a,\n",
     "     silver.db_2021_digital AS b\n",
     "WHERE ST_Intersects(a.geometry, b.geom);\n",
     "\n",
     "-- Create spatial index\n",
-    "CREATE INDEX nar_2024_12_geom_idx ON silver.nar_2024_12 USING gist (geom) WITH (\n",
+    "CREATE INDEX nar_2024_06_geom_idx ON silver.nar_2024_06 USING gist (geom) WITH (\n",
     "    fillfactor = 100\n",
     ");\n",
     "\"\"\""
@@ -503,17 +503,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "ae7babb4-a3e6-4c0b-93a6-3b52a4f89a1b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.CursorResult at 0x7f38310c66d0>"
+       "<sqlalchemy.engine.cursor.CursorResult at 0x7f523a52d940>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
